# thanos-sort

./: .gitignore  CMakeLists.txt  README.md  main.cpp  thanos.cpp  thanos.hpp
tests/: CMakeLists.txt  test1.cpp
